more stuff done #gklst

--- a/Geekit for Safari.safariextension/popup.html
+++ b/Geekit for Safari.safariextension/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="lv">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title i18n-content="extensionname">GeekIt™ for Chrome</title>
+		<title i18n-content="extensionname">GeekIt™ for Safari</title>
 		<script src="js/bookmarklet.js"></script>
 		<link rel="stylesheet" href="css/bookmarklet.css" />
 	</head>
